--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.12.3",
     "@mui/styles": "^5.12.3",
+    "@mui/x-date-pickers": "^6.5.0",
     "@react-leaflet/core": "^1.0.2",
     "@tippyjs/react": "^4.2.6",
     "@types/react": "^17.0.11",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
+    "dayjs": "^1.11.7",
     "iframe-resizer-react": "^1.1.0",
     "js-file-download": "^0.4.12",
     "leaflet": "^1.7.1",
