--- a/package.json
+++ b/package.json
@@ -4,34 +4,22 @@
   "private": true,
   "license": "GPL-3.0-only",
   "dependencies": {
-    "@emotion/react": "11.11.0",
-    "@emotion/style": "^0.8.0",
-    "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.129",
-    "@mui/material": "^5.12.3",
-    "@mui/styles": "^5.12.3",
-    "@mui/x-date-pickers": "^6.6.0",
     "@react-leaflet/core": "^1.0.2",
     "@tippyjs/react": "^4.2.6",
     "@types/react": "^17.0.11",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
-    "dayjs": "^1.11.7",
     "iframe-resizer-react": "^1.1.0",
     "js-file-download": "^0.4.12",
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
     "node": "^14.7.0",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.2.1",
-    "react-devtools": "^4.27.8",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.14.0",
     "react-dropzone": "^11.4.2",
     "react-excel-renderer": "^1.1.0",
     "react-flip-numbers": "^3.0.5",
@@ -40,15 +28,13 @@
     "react-leaflet": "^3.1.0",
     "react-modal": "^3.14.3",
     "react-papaparse": "^3.17.2",
-    "react-responsive": "^9.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
-    "react-tabulator": "^0.9.6",
-    "typescript": "^5.0.4"
+    "react-tabulator": "^0.9.6"
   },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=8128 start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
