--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "private": true,
   "license": "GPL-3.0-only",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.4",
+    "@mui/styles": "^5.13.2",
+    "@mui/x-data-grid": "^6.6.0",
+    "@mui/x-date-pickers": "^6.6.0",
     "@react-leaflet/core": "^1.0.2",
     "@tippyjs/react": "^4.2.6",
-    "@types/react": "^17.0.11",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
+    "dayjs": "^1.11.8",
+    "eslint": "^8.42.0",
     "iframe-resizer-react": "^1.1.0",
     "js-file-download": "^0.4.12",
     "leaflet": "^1.7.1",
@@ -28,13 +38,14 @@
     "react-leaflet": "^3.1.0",
     "react-modal": "^3.14.3",
     "react-papaparse": "^3.17.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
     "react-tabulator": "^0.9.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
