--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
-    "react-tabulator": "^0.9.6"
+    "react-tabulator": "^0.9.6",
+    "typescript": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
