--- a/package.json
+++ b/package.json
@@ -43,13 +43,15 @@
     "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
     "react-tabulator": "^0.9.6",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "json-server": "0.17.3"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "mockAPI": "json-server --watch ./src/search/mockData.json --port 8443"
   },
   "eslintConfig": {
     "extends": "react-app"
