--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/x-data-grid": "^6.6.0",
     "@mui/x-date-pickers": "^6.6.0",
     "@react-leaflet/core": "^1.0.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tippyjs/react": "^4.2.6",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
@@ -22,6 +23,7 @@
     "eslint": "^8.42.0",
     "iframe-resizer-react": "^1.1.0",
     "js-file-download": "^0.4.12",
+    "json-server": "0.17.3",
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
@@ -38,13 +40,13 @@
     "react-leaflet": "^3.1.0",
     "react-modal": "^3.14.3",
     "react-papaparse": "^3.17.2",
+    "react-redux": "^8.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
     "react-tabulator": "^0.9.6",
-    "typescript": "^5.1.3",
-    "json-server": "0.17.3"
+    "typescript": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
