--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-leaflet": "^3.1.0",
     "react-modal": "^3.14.3",
     "react-papaparse": "^3.17.2",
+    "react-pdf": "^7.1.2",
     "react-redux": "^8.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^5.3.0",
