--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,22 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "name": "Attach to Edge",
+            "port": 3000,
+            "request": "attach",
+            "type": "msedge",
+            "webRoot": "${workspaceFolder}\\src\\"
+        },
+        {
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/app.js",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
         
         {
             "name": "Launch Edge",
@@ -16,11 +32,20 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Debug",
+            "name": "Launch NODE Debug",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\src\\Main.js"
+            "program": "${workspaceFolder}\\src\\index.js"
+        },
+        {
+            "name": "msedge",
+            "type": "msedge",
+            "request": "launch",
+            "url": "http://localhost:3000",      // create-react-app's default port 3000
+            "webRoot": "${workspaceRoot}/src",
+            "preLaunchTask": "npm run start"        // Add prelaunch Task npm: start (defined in tasks.json)
         }
+          
     ]
 }
