--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
     "react-tabulator": "^0.9.6",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.1-rc"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
