--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.4",
+    "@mui/material": "^5.13.5",
     "@mui/styles": "^5.13.2",
-    "@mui/x-data-grid": "^6.6.0",
-    "@mui/x-date-pickers": "^6.6.0",
+    "@mui/x-data-grid": "^6.7.0",
+    "@mui/x-date-pickers": "^6.7.0",
     "@react-leaflet/core": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@tippyjs/react": "^4.2.6",
-    "axios": "^0.21.1",
+    "axios": "^1.4.0",
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
     "dayjs": "^1.11.8",
@@ -27,11 +27,11 @@
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
-    "node": "^14.7.0",
-    "react": "^16.14.0",
+    "node": "^20.2.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.2.1",
-    "react-dom": "^16.14.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^11.4.2",
     "react-excel-renderer": "^1.1.0",
     "react-flip-numbers": "^3.0.5",
@@ -43,11 +43,11 @@
     "react-pdf": "^7.1.2",
     "react-redux": "^8.1.0",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
     "react-tabulator": "^0.9.6",
-    "typescript": "^5.1.1-rc"
+    "typescript": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
