--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-dropzone": "^11.4.2",
     "react-excel-renderer": "^1.1.0",
     "react-flip-numbers": "^3.0.5",
