--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@mui/styles": "^5.13.2",
     "@mui/x-data-grid": "^6.7.0",
     "@mui/x-date-pickers": "^6.7.0",
+    "@phuocng/react-pdf-viewer": "^1.7.0",
     "@react-leaflet/core": "^1.0.2",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.4.0",
@@ -28,6 +30,7 @@
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
     "node": "^20.2.0",
+    "pdfjs-dist": "^3.7.107",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.2.1",
@@ -43,6 +46,7 @@
     "react-modal": "^3.14.3",
     "react-papaparse": "^3.17.2",
     "react-pdf": "^7.1.2",
+    "react-pdf-html": "^1.1.18",
     "react-redux": "^8.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^5.3.3",
@@ -50,6 +54,9 @@
     "react-select": "^5.7.3",
     "react-tabulator": "^0.9.6",
     "typescript": "^5.1.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
