--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "react-tabulator": "^0.9.6",
+    "storybook": "^7.0.25",
     "typescript": "^5.1.0"
   },
   "devDependencies": {
