--- a/package.json
+++ b/package.json
@@ -54,18 +54,33 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "react-tabulator": "^0.9.6",
-    "storybook": "^7.0.25",
-    "typescript": "^5.1.0"
+    "storybook": "^7.0.25"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@storybook/addon-essentials": "^7.0.26",
+    "@storybook/addon-interactions": "7.0.26",
+    "@storybook/addon-links": "7.0.26",
+    "@storybook/addon-styling": "^1.3.2",
+    "@storybook/blocks": "7.0.26",
+    "@storybook/preset-create-react-app": "7.0.26",
+    "@storybook/react": "7.0.26",
+    "@storybook/react-webpack5": "7.0.26",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "babel-plugin-named-exports-order": "0.0.2",
+    "eslint-plugin-storybook": "^0.6.12",
+    "prop-types": "15.8.1",
+    "typescript": "^5.1.6",
+    "webpack": "5.88.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "mockAPI": "json-server --watch ./src/search/mockData/db.json --port 8443"
+    "mockAPI": "json-server --watch ./src/search/mockData/db.json --port 8443",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": "react-app"
