--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/x-date-pickers": "^6.7.0",
     "@phuocng/react-pdf-viewer": "^1.7.0",
     "@react-leaflet/core": "^1.0.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
     "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@tippyjs/react": "^4.2.6",
