--- a/.bablerc
+++ b/.bablerc
@@ -14,7 +14,8 @@
       "alias": {
         "database": "./src/database",
         "localization": "./localization",
-        "utils": "./utils"
+        "utils": "./utils",
+        "pdfjs-dist":"./node_modules/pdfjs-dist/legacy/build/pdf.js"
       }
     }]
   ],
