--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "@phuocng/react-pdf-viewer": "^1.7.0",
     "@react-leaflet/core": "^1.0.2",
     "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/full-screen": "^3.12.0",
+    "@react-pdf-viewer/open": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
@@ -32,8 +37,9 @@
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
     "node": "^20.2.0",
-    "pdfjs-dist": "^3.7.107",
+    "pdfjs-dist": "3.4.120",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
