--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/full-screen": "^3.12.0",
+    "@react-pdf-viewer/highlight": "^3.12.0",
     "@react-pdf-viewer/open": "^3.12.0",
     "@react-pdf-viewer/page-navigation": "^3.12.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
