--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "@storybook/react-webpack5": "7.0.26",
     "@storybook/testing-library": "0.0.14-next.2",
     "babel-plugin-named-exports-order": "0.0.2",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
     "prop-types": "15.8.1",
     "typescript": "^5.1.6",
