--- a/package.json
+++ b/package.json
@@ -4,34 +4,85 @@
   "private": true,
   "license": "GPL-3.0-only",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
+    "@mui/styles": "^5.13.2",
+    "@mui/x-data-grid": "^6.7.0",
+    "@mui/x-date-pickers": "^6.7.0",
+    "@phuocng/react-pdf-viewer": "^1.7.0",
     "@react-leaflet/core": "^1.0.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/full-screen": "^3.12.0",
+    "@react-pdf-viewer/highlight": "^3.12.0",
+    "@react-pdf-viewer/open": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
+    "@react-pdf/renderer": "^3.1.12",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tippyjs/react": "^4.2.6",
-    "@types/react": "^17.0.11",
-    "axios": "^0.21.1",
+    "axios": "^1.4.0",
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
+    "dayjs": "^1.11.8",
+    "eslint": "^8.42.0",
     "iframe-resizer-react": "^1.1.0",
     "js-file-download": "^0.4.12",
+    "json-server": "0.17.3",
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
-    "node": "^14.7.0",
-    "react": "^16.14.0",
+    "node": "^20.2.0",
+    "pdfjs-dist": "3.4.120",
+    "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.2.1",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
+    "react-dropdown": "^1.11.0",
+    "react-dropdown-select": "^4.9.4",
     "react-dropzone": "^11.4.2",
     "react-excel-renderer": "^1.1.0",
     "react-flip-numbers": "^3.0.5",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-leaflet": "^3.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.14.3",
     "react-papaparse": "^3.17.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
-    "react-select": "^4.3.1",
-    "react-tabulator": "^0.9.6"
+    "react-pdf": "^7.1.2",
+    "react-pdf-html": "^1.1.18",
+    "react-redux": "^8.1.0",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^5.3.3",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.3",
+    "react-tabulator": "^0.9.6",
+    "storybook": "^7.0.25"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@storybook/addon-essentials": "^7.0.26",
+    "@storybook/addon-interactions": "7.0.26",
+    "@storybook/addon-links": "7.0.26",
+    "@storybook/addon-styling": "^1.3.2",
+    "@storybook/blocks": "7.0.26",
+    "@storybook/preset-create-react-app": "7.0.26",
+    "@storybook/react": "7.0.26",
+    "@storybook/react-webpack5": "7.0.26",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "babel-plugin-named-exports-order": "0.0.2",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.12",
+    "prop-types": "15.8.1",
+    "typescript": "^5.1.6",
+    "webpack": "5.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
