--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-flip-numbers": "^3.0.5",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-jss": "^10.10.0",
     "react-leaflet": "^3.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.14.3",
