--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
+    "prettier": "3.0.2",
     "prop-types": "15.8.1",
     "typescript": "^5.1.6",
     "webpack": "5.88.1"
