--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@emotion/types": "^0.7.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@mui/styles": "^5.13.2",
+    "@mui/types": "^7.2.4",
     "@mui/x-data-grid": "^6.7.0",
     "@mui/x-date-pickers": "^6.7.0",
     "@phuocng/react-pdf-viewer": "^1.7.0",
@@ -26,6 +28,12 @@
     "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@tippyjs/react": "^4.2.6",
+    "@types/axios": "^0.14.0",
+    "@types/material-ui": "^0.21.12",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.6",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
