--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.33.0",
     "@tippyjs/react": "^4.2.6",
     "@types/axios": "^0.14.0",
     "@types/material-ui": "^0.21.12",
@@ -59,6 +60,7 @@
     "react-flip-numbers": "^3.0.5",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.45.4",
     "react-jss": "^10.10.0",
     "react-leaflet": "^3.1.0",
     "react-loader-spinner": "^5.3.4",
@@ -66,6 +68,7 @@
     "react-papaparse": "^3.17.2",
     "react-pdf": "^7.1.2",
     "react-pdf-html": "^1.1.18",
+    "react-query": "^3.23.0",
     "react-redux": "^8.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^5.3.3",
