Excluding examples from commits due to the size of the docs
Keep it via box or such

--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,5 @@ src/NEPAccess frontend source/UserDetails.txt
 src/NEPAccess.code-workspace
 .history/**
 public/docs**
-/src/search/*.pdf
+!**/.pdf
+*.pdf
