--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,4 @@ src/NEPAccess frontend source/UserDetails.txt
 src/NEPAccess.code-workspace
 .history/**
 public/docs**
-!**/.pdf
-*.pdf
+src/search/**/*.pdf
