--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,27 @@
             "name": "Launch Edge against localhost",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
+        },
+        {
+            "type": "node",
+            "name": "vscode-jest-tests.v2.nepaccessFront-reskin",
+            "request": "launch",
+            "args": [
+                "test",
+                "test",
+                "--runInBand",
+                "--watchAll=false",
+                "--testNamePattern",
+                "${jest.testNamePattern}",
+                "--runTestsByPath",
+                "${jest.testFile}"
+            ],
+            "cwd": "c:\\code\\nepa\\repos\\nepaccessFront-reskin",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true,
+            "runtimeExecutable": "yarn",
+            "protocol": "inspector"
         }
     ]
 }
