--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "GPL-3.0-only",
   "dependencies": {
+    "@devtools-ai/cypress-sdk": "^0.1.27",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@emotion/types": "^0.7.0",
@@ -37,10 +38,12 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "chart.js": "^2.9.4",
+    "cypress": "^13.2.0",
     "d3": "^3.5.17",
     "dayjs": "^1.11.8",
     "eslint": "^8.42.0",
     "iframe-resizer-react": "^1.1.0",
+    "jest": "^29.7.0",
     "js-file-download": "^0.4.12",
     "json-server": "0.17.3",
     "leaflet": "^1.7.1",
@@ -100,6 +103,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "jest": "jest",
+    "cypress:open": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
