--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,25 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+      {
+        "name": "Launch Edge",
+        "request": "launch",
+        "type": "msedge",
+        "url": "http://localhost:3000",
+        "webRoot": "${workspaceFolder}"
+      },
+      {
+        "name": "Attach to Edge",
+        "port": 9222,
+        "request": "attach",
+        "type": "msedge",
+        "webRoot": "${workspaceFolder}"
+      },
         {
+            "name" : "Attach Edge against localhost",
             "type": "msedge",
-            "request": "launch",
-            "name": "Launch Edge against localhost",
+            "request": "attach",
+            "port": 9229,
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
         },
