--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "chart.js": "^2.9.4",
+    "clsx": "^2.0.0",
     "cypress": "^13.2.0",
     "d3": "^3.5.17",
     "dayjs": "^1.11.8",
     "eslint": "^8.42.0",
+    "faker": "^6.6.6",
     "iframe-resizer-react": "^1.1.0",
+    "immutable": "^5.0.0-beta.4",
     "jest": "^29.7.0",
     "js-file-download": "^0.4.12",
     "json-server": "0.17.3",
@@ -77,6 +80,10 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "react-tabulator": "^0.9.6",
+    "react-virtualized": "^9.22.5",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
+    "react-window-infinite-loader": "^1.0.9",
     "storybook": "^7.0.25"
   },
   "devDependencies": {
@@ -95,7 +102,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
     "prettier": "3.0.2",
-    "prop-types": "15.8.1",
+    "prop-types": "^15.8.1",
     "typescript": "^5.1.6",
     "webpack": "5.88.1"
   },
