--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "private": true,
   "license": "GPL-3.0-only",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.14.10",
+    "@mui/styles": "^5.13.2",
+    "@mui/x-data-grid": "^6.7.0",
+    "@mui/x-date-pickers": "^6.7.0",
     "@react-leaflet/core": "^1.0.2",
     "@tippyjs/react": "^4.2.6",
     "@types/react": "^17.0.11",
@@ -16,10 +25,10 @@
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
     "node": "^14.7.0",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.2.1",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-excel-renderer": "^1.1.0",
     "react-flip-numbers": "^3.0.5",
@@ -28,10 +37,12 @@
     "react-leaflet": "^3.1.0",
     "react-modal": "^3.14.3",
     "react-papaparse": "^3.17.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^5.3.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
-    "react-tabulator": "^0.9.6"
+    "react-tabulator": "^0.9.6",
+    "webpack": "5.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
