--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "GPL-3.0-only",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
@@ -14,6 +15,7 @@
     "@mui/x-data-grid": "^6.7.0",
     "@mui/x-date-pickers": "^6.7.0",
     "@react-leaflet/core": "^1.0.2",
+    "@testing-library/react": "^14.0.0",
     "@tippyjs/react": "^4.2.6",
     "@types/react": "^17.0.11",
     "axios": "^0.21.1",
@@ -25,6 +27,7 @@
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
     "node": "^14.7.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.2.1",
@@ -42,6 +45,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
     "react-tabulator": "^0.9.6",
+    "typescript": "^5.2.2",
     "webpack": "5.88.1"
   },
   "scripts": {
