--- a/package.json
+++ b/package.json
@@ -9,44 +9,47 @@
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.14.10",
-    "@mui/styles": "^5.13.2",
-    "@mui/x-data-grid": "^6.7.0",
-    "@mui/x-date-pickers": "^6.7.0",
-    "@react-leaflet/core": "^1.0.2",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.11.5",
+    "@mui/styles": "^5.14.10",
+    "@mui/x-data-grid": "^6.14.0",
+    "@mui/x-date-pickers": "^6.14.0",
+    "@react-leaflet/core": "^2.1.0",
+    "@sentry/react": "^7.70.0",
     "@testing-library/react": "^14.0.0",
     "@tippyjs/react": "^4.2.6",
-    "@types/react": "^17.0.11",
-    "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
-    "d3": "^3.5.17",
+    "@types/react": "^18.2.22",
+    "add": "^2.0.6",
+    "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
+    "d3": "^7.8.5",
     "iframe-resizer-react": "^1.1.0",
     "js-file-download": "^0.4.12",
-    "leaflet": "^1.7.1",
-    "leaflet-geosearch": "^3.6.1",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^3.9.0",
     "lodash": "^4.17.21",
-    "node": "^14.7.0",
+    "node": "^20.6.0",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-chartjs-2": "^2.11.2",
-    "react-datepicker": "^4.2.1",
-    "react-dom": "^17.0.2",
-    "react-dropzone": "^11.4.2",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.18.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-excel-renderer": "^1.1.0",
-    "react-flip-numbers": "^3.0.5",
-    "react-google-recaptcha": "^2.1.0",
+    "react-flip-numbers": "^3.0.8",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
-    "react-leaflet": "^3.1.0",
-    "react-modal": "^3.14.3",
-    "react-papaparse": "^3.17.2",
+    "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
+    "react-papaparse": "^4.1.0",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^5.3.3",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-    "react-select": "^4.3.1",
-    "react-tabulator": "^0.9.6",
+    "react-select": "^5.7.5",
+    "react-tabulator": "^0.19.0",
     "typescript": "^5.2.2",
-    "webpack": "5.88.1"
+    "webpack": "5.88.2",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
