--- a/package.json
+++ b/package.json
@@ -4,57 +4,109 @@
   "private": true,
   "license": "GPL-3.0-only",
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@emotion/react": "^11.11.1",
+    "@devtools-ai/cypress-sdk": "^0.1.27",
+    "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@emotion/types": "^0.7.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.11.5",
-    "@mui/styles": "^5.14.10",
-    "@mui/x-data-grid": "^6.14.0",
-    "@mui/x-date-pickers": "^6.14.0",
-    "@react-leaflet/core": "^2.1.0",
-    "@sentry/react": "^7.70.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
+    "@mui/styles": "^5.13.2",
+    "@mui/types": "^7.2.4",
+    "@mui/x-data-grid": "^6.7.0",
+    "@mui/x-date-pickers": "^6.7.0",
+    "@phuocng/react-pdf-viewer": "^1.7.0",
+    "@react-leaflet/core": "^1.0.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/full-screen": "^3.12.0",
+    "@react-pdf-viewer/highlight": "^3.12.0",
+    "@react-pdf-viewer/open": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
+    "@react-pdf/renderer": "^3.1.12",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@sentry/browser": "^7.70.0",
+    "@tanstack/react-query": "^4.33.0",
     "@testing-library/react": "^14.0.0",
     "@tippyjs/react": "^4.2.6",
-    "@types/react": "^18.2.22",
-    "add": "^2.0.6",
-    "axios": "^1.5.0",
-    "chart.js": "^4.4.0",
-    "d3": "^7.8.5",
+    "@types/axios": "^0.14.0",
+    "@types/material-ui": "^0.21.12",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.6",
+    "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
+    "chart.js": "^2.9.4",
+    "cypress": "^13.2.0",
+    "d3": "^3.5.17",
+    "dayjs": "^1.11.8",
+    "eslint": "^8.42.0",
     "iframe-resizer-react": "^1.1.0",
+    "jest": "^29.7.0",
     "js-file-download": "^0.4.12",
-    "leaflet": "^1.9.4",
-    "leaflet-geosearch": "^3.9.0",
+    "json-server": "0.17.3",
+    "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
-    "node": "^20.6.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^4.18.0",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
+    "node": "^20.2.0",
+    "pdfjs-dist": "3.4.120",
+    "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
+    "react-chartjs-2": "^2.11.2",
+    "react-datepicker": "^4.2.1",
+    "react-dom": "^17.0.2",
+    "react-dropdown": "^1.11.0",
+    "react-dropdown-select": "^4.9.4",
+    "react-dropzone": "^11.4.2",
     "react-excel-renderer": "^1.1.0",
-    "react-flip-numbers": "^3.0.8",
-    "react-google-recaptcha": "^3.1.0",
+    "react-flip-numbers": "^3.0.5",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
-    "react-leaflet": "^4.2.1",
-    "react-modal": "^3.16.1",
-    "react-papaparse": "^4.1.0",
+    "react-hook-form": "^7.45.4",
+    "react-leaflet": "^3.1.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-modal": "^3.14.3",
+    "react-papaparse": "^3.17.2",
+    "react-pdf": "^7.1.2",
+    "react-pdf-html": "^1.1.18",
+    "react-query": "^3.23.0",
+    "react-redux": "^8.1.0",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.7.5",
-    "react-tabulator": "^0.19.0",
-    "typescript": "^5.2.2",
-    "webpack": "5.88.2",
-    "yarn": "^1.22.19"
+    "react-select": "^5.7.3",
+    "react-tabulator": "^0.9.6",
+    "storybook": "^7.0.25"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@storybook/addon-essentials": "^7.0.26",
+    "@storybook/addon-interactions": "7.0.26",
+    "@storybook/addon-links": "7.0.26",
+    "@storybook/addon-styling": "^1.3.2",
+    "@storybook/blocks": "7.0.26",
+    "@storybook/preset-create-react-app": "7.0.26",
+    "@storybook/react": "7.0.26",
+    "@storybook/react-webpack5": "7.0.26",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "babel-plugin-named-exports-order": "0.0.2",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.12",
+    "prettier": "3.0.2",
+    "prop-types": "15.8.1",
+    "typescript": "^5.0.0",
+    "webpack": "5.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "jest": "jest",
+    "cypress:open": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
