--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "react-tabulator": "^0.19.0",
-    "storybook": "^7.0.25"
+    "storybook": "^7.0.25",
+    "tabulator-tables": "^5.5.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
