--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,12 @@
 {
     "configurations": [
+      {
+        "name": "Launch Edge",
+        "request": "launch",
+        "type": "msedge",
+        "url": "http://localhost:3000/",
+        "webRoot": "${workspaceFolder}"
+      },
         
         {
             "type": "msedge",
