--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lodash": "^4.17.21",
     "node": "^20.2.0",
     "pdfjs-dist": "3.4.120",
+    "rc-virtual-list": "^3.11.2",
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
     "react-chartjs-2": "^2.11.2",
