--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,18 @@
 {
     "configurations": [
+
       {
-        "name": "Launch Edge",
+        "name": "Launch Chrome",
         "request": "launch",
-        "type": "msedge",
+        "type": "chrome",
         "url": "http://localhost:3000/",
         "webRoot": "${workspaceFolder}"
       },
         
         {
-            "type": "msedge",
-            "name": "http://localhost:3000/",
-            "request": "launch",
+            "type": "chrome",
+            "name": "Attach Chrome",
+            "request": "attach",
             "url": "http://localhost:3000/"
         }
     ]
