Added react virtualized and updated React to 18
See https://stackoverflow.com/questions/71682733/react-select-error-on-upgrade-typeerror-dispatcher-useinsertioneffect-is-not-a

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
     "dayjs": "^1.11.8",
+    "eslint-config-prettier": "9.0.0",
     "iframe-resizer-react": "^1.1.0",
     "js-file-download": "^0.4.12",
     "json-server": "0.17.3",
@@ -53,13 +54,11 @@
     "prettier": "3.0.3",
     "prettier-eslint-cli": "7.1.0",
     "prettier-plugin-organize-imports": "3.2.3",
-    "eslint-config-prettier": "9.0.0",
-    "rc-virtual-list": "^3.11.2",
-    "react": "^18.0.2",
+    "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-chartjs-2": "^2.11.2",
     "react-datepicker": "^4.20.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.2",
     "react-dropdown": "^1.11.0",
     "react-dropdown-select": "^4.10.0",
     "react-dropzone": "^11.4.2",
@@ -79,6 +78,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.7",
     "react-tabulator": "^0.19.0",
+    "react-virtualized": "^9.22.5",
     "serve": "^14.2.1",
     "tabulator-tables": "^5.5.2"
   },
