changes to debugging settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,14 @@
         "type": "chrome",
         "url": "http://localhost:3000/",
         "webRoot": "${workspaceFolder}"
+
       },
-        
+
         {
             "type": "chrome",
             "name": "Attach Chrome",
             "request": "attach",
+            "port": 3000,
             "url": "http://localhost:3000/"
         }
     ]
