--- a/package.json
+++ b/package.json
@@ -77,7 +77,11 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.7",
     "react-tabulator": "^0.19.0",
+    "react-virtual": "^2.10.4",
     "react-virtualized": "^9.22.5",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
+    "react-window-infinite-loader": "^1.0.9",
     "serve": "^14.2.1",
     "tabulator-tables": "^5.5.2"
   },
@@ -86,6 +90,7 @@
     "eslint": "^8.51.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "flow-bin": "^0.218.1",
     "prop-types": "15.8.1",
     "typescript": "^5.0.0",
     "webpack": "5.88.1"
