--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 # https://stackoverflow.com/questions/55904292/how-to-generate-sourcemaps-in-create-react-app
-GENERATE_SOURCEMAP=false
+GENERATE_SOURCEMAP=true
+PORT=80
+HOST=beta.nepacess.org
+FAST_REFRESH=true
