added dotenv package

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.3",
     "@mui/styles": "^5.14.3",
-    "@mui/types": "^7.2.4",
+    "@mui/types": "^7.2.8",
     "@mui/x-data-grid": "^6.16.1",
     "@mui/x-date-pickers": "^6.16.1",
     "@react-leaflet/core": "^1.0.2",
@@ -31,6 +31,7 @@
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
     "dayjs": "^1.11.8",
+    "dotenv": "^16.3.1",
     "eslint-config-prettier": "9.0.0",
     "iframe-resizer-react": "^1.1.0",
     "js-file-download": "^0.4.12",
