Reworked responsive elements to tweak different screens

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
+# development@v5
 # https://stackoverflow.com/questions/55904292/how-to-generate-sourcemaps-in-create-react-app
 GENERATE_SOURCEMAP=true
-#PORT=3000
-#HOST=beta.nepacess.org
+API_HOST= bighorn.sbs.arizona.edu:8443/nepaBackend/
+PORT=3000
+HOST=localhost
+HTTPS=true
 FAST_REFRESH=true
+# QYRys3pSJR6oDX01v8GjFgLu #
