--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@react-pdf-viewer/toolbar": "^3.12.0",
     "@react-pdf/renderer": "^3.1.12",
     "@sentry/browser": "^7.75.1",
-    "@tippyjs/react": "^4.2.6",
     "axios": "^1.5.1",
     "chart.js": "^2.9.4",
     "d3": "^3.5.17",
@@ -40,7 +39,7 @@
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.6.1",
     "lodash": "^4.17.21",
-    "pdfjs-dist": "3.4.120",
+    "pdfjs-dist": "4.0.98",
     "prettier": "3.0.3",
     "prettier-eslint-cli": "7.1.0",
     "prettier-plugin-organize-imports": "3.2.3",
@@ -64,7 +63,7 @@
     "react-pdf": "^7.1.2",
     "react-pdf-html": "^1.1.18",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^5.3.3",
+    "react-router-dom": "^6.20.9",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.7",
     "react-tabulator": "^0.19.0",
@@ -72,7 +71,8 @@
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.9",
     "serve": "^14.2.1",
-    "tabulator-tables": "^5.5.2"
+    "tabulator-tables": "^5.5.2",
+    "@tippyjs/react": "^4.2.6"
   },
   "devDependencies": {
     "babel-plugin-named-exports-order": "0.0.2",
