--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@ GENERATE_SOURCEMAP=true
 API_HOST = http://localhost:8080/nepaBackend #http://bighorn.sbs.arizona.edu:8443/nepaBackend/
 PORT=3000
 HOST=localhost
-HTTPS=TRUE
+HTTPS=FALSE
 FAST_REFRESH=true
 NODE_ENV=DEVELOPMENT
+GENERATE_SOURCEMAP=true
+CHOKIDAR_USEPOLLING=true
 # QYRys3pSJR6oDX01v8GjFgLu #
