Turned off SOURCEMAP

--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
 # development@v3
 # https://stackoverflow.com/questions/55904292/how-to-generate-sourcemaps-in-create-react-app
-GENERATE_SOURCEMAP=true
+GENERATE_SOURCEMAP=false
 API_HOST = http://localhost:8080/nepaBackend #http://bighorn.sbs.arizona.edu:8443/nepaBackend/
 PORT=3000
 HOST=localhost
 HTTPS=FALSE
 FAST_REFRESH=true
 NODE_ENV=DEVELOPMENT
-GENERATE_SOURCEMAP=true
 CHOKIDAR_USEPOLLING=true
 # QYRys3pSJR6oDX01v8GjFgLu #
